unpackaged/objects/TMFC_TeamForce_Work_Task__c.object
<CustomObject>
  <fields>
    <fullName>TMFC_Components_Created__c</fullName>
    <inlineHelpText>Indicate in this field any net new components created as a part of this Work Task</inlineHelpText>
    <label>Components Created</label>
    <length>5000</length>
    <type>LongTextArea</type>
  </fields>
  <fields>
    <fullName>TMFC_Components_Updated__c</fullName>
    <inlineHelpText>Indicate in this field any previously-existing components which were updated as a part of this Work Task</inlineHelpText>
    <label>Components Updated</label>
    <length>5000</length>
    <type>LongTextArea</type>
  </fields>
  <fields>
    <fullName>TMFC_TeamForce_User_Story__c</fullName>
    <label>TeamForce User Story</label>
    <referenceTo>TMFC_TeamForce_User_Story__c</referenceTo>
    <relationshipLabel>TeamForce Work Tasks</relationshipLabel>
    <relationshipName>TeamForce_Work_Tasks</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
  </fields>
  <fields>
    <fullName>TMFC_Work_Task_Assignee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Task Assignee</label>
    <referenceTo>User</referenceTo>
    <relationshipName>TeamForce_Work_Tasks</relationshipName>
    <type>Lookup</type>
  </fields>
  <fields>
    <fullName>TMFC_Work_Task_Details__c</fullName>
    <label>Work Task Details</label>
    <length>32768</length>
    <type>Html</type>
  </fields>
  <fields>
    <fullName>TMFC_Work_Task_Status__c</fullName>
    <label>Work Task Status</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>New</fullName>
          <default>true</default>
          <label>New</label>
        </value>
        <value>
          <fullName>In Progress</fullName>
        </value>
        <value>
          <fullName>Complete</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>TMFC_Work_Task_Title__c</fullName>
    <label>Work Task Title</label>
    <length>50</length>
    <type>Text</type>
  </fields>
  <label>TeamForce Work Task</label>
  <nameField>
    <displayFormat>TFWT-{000000000}</displayFormat>
    <label>TeamForce Work Task ID</label>
    <type>AutoNumber</type>
  </nameField>
  <pluralLabel>TeamForce Work Tasks</pluralLabel>
  <sharingModel>ControlledByParent</sharingModel>
</CustomObject>